--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <body>
     <nav>
         leader is in charge
+        haha
+        keep going
+        woooowoowoowowo
     </nav>
     <main>
 
